--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,65 @@
-$bgColor: rgb(55, 127, 175);
+@use "variaveis";
+@use "hero";
+
+@font-face {
+  font-family: Avenir;
+  src: url(../../assets/fonts/Avenir-Regular.woff2);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Avenir;
+  src: url(../../assets/fonts/Avenir-Bold.woff2);
+  font-weight: 700;
+}
+
+@mixin text($fontSize: 16px) {
+  font-size: $fontSize;
+  line-height: $fontSize + 10px;
+  color: variaveis.$CorTextoPrincipal;
+}
+
+@mixin title($fontSize: 28px) {
+  @include text($fontSize);
+  color: variaveis.$CorTextoSecundario;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  background-color: $bgColor;
+  background-color: variaveis.$CorDeFundo;
+  font-family: Avenir, sans-serif;
+}
+
+.text {
+  @include text;
+
+  &--small {
+    @include text(12px);
+  }
+
+  &--big {
+    @include text(18px);
+  }
+}
+
+.title {
+  @include title;
+
+  &--big {
+    @include title(44px);
+  }
+
+  &--small {
+    @include title(28px);
+  }
+}
+
+.link-text {
+  @include text(18px);
+  color: variaveis.$CorTextoSecundario;
 }
