--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -2,6 +2,8 @@
 
 .shows {
   padding: 2vw 5.6vw;
+  min-height: 50vw;
+
   &__list {
     margin-top: 44px;
     display: none;
@@ -30,9 +32,11 @@
       background: none;
       text-transform: uppercase;
       margin: 0 1vw;
+      cursor: pointer;
+      border-bottom: transparent 5px solid;
 
-      &--is--active {
-        border-bottom: 5px solid variaveis.$CorTextoSecundario;
+      &--is-active {
+        border-color: variaveis.$CorTextoSecundario;
       }
     }
   }
