--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @use "hero";
 @use "shows";
 @use "plans";
+@use "available-devices";
 
 @font-face {
   font-family: Avenir;
@@ -21,7 +22,7 @@
   color: variaveis.$CorTextoPrincipal;
 }
 
-@mixin title($fontSize: 28px) {
+@mixin title($fontSize: 40px) {
   @include text($fontSize);
   color: variaveis.$CorTextoSecundario;
 }
@@ -78,4 +79,43 @@ body {
   border-radius: 4px;
   margin-top: 2vw;
   margin-bottom: 8px;
+}
+
+.image-text-section {
+  padding: 5.6vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+
+  img {
+    max-width: 100%;
+  }
+
+  &__text_container {
+    padding: 0 2vw;
+
+    h2 {
+      margin-bottom: 24px;
+    }
+  }
+
+  &--image-full-width {
+    display: block;
+    position: relative;
+
+    img {
+      width: 100%;
+    }
+
+    &__text_container {
+      position: absolute;
+      top: 0;
+      height: 100%;
+      width: calc(50% - 5.6vw);
+      left: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
 }
