--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,8 @@
 @use "plans";
 @use "available-devices";
 @use "faq";
+@use "footer";
+@use "header";
 
 @font-face {
   font-family: Avenir;
@@ -33,6 +35,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Avenir, sans-serif;
+  list-style: none;
 }
 
 body {
@@ -70,16 +73,41 @@ body {
 
 .button {
   border: none;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 60px;
   font-size: 18px;
   color: variaveis.$CorTextoSecundario;
-  background-color: #6421ff;
+  background-color: variaveis.$CorDeFundoBotaoPrimario;
   text-transform: uppercase;
   border-radius: 4px;
-  margin-top: 2vw;
-  margin-bottom: 8px;
+  text-decoration: none;
+  padding: 8px 14px;
+  letter-spacing: 1px;
+  border: 1px solid variaveis.$CorDeFundo;
+  &:hover {
+    background-color: lighten(variaveis.$CorDeFundoBotaoPrimario, 3%);
+  }
+
+  &--secondary {
+    background-color: variaveis.$CorDeFundoBotaoSecundario;
+
+    &:hover {
+      background-color: lighten(variaveis.$CorDeFundoBotaoSecundario, 3%);
+    }
+  }
+
+  &--dark {
+    background-color: rgba(variaveis.$CorDeFundoBotaoDark, 0.8);
+    border-color: variaveis.$CorTextoSecundario;
+
+    &:hover {
+      background-color: variaveis.$CorTextoSecundario;
+      color: variaveis.$CorDeFundo;
+    }
+  }
 }
 
 .image-text-section {
