ajustes no mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,24 +45,48 @@ body {
 .text {
   @include text;
 
+  @media (max-width: 768px) {
+    @include text(14px);
+  }
+
   &--small {
     @include text(12px);
+
+    @media (max-width: 768px) {
+      @include text(11px);
+    }
   }
 
   &--big {
     @include text(18px);
+
+    @media (max-width: 768px) {
+      @include text(15px);
+    }
   }
 }
 
 .title {
   @include title;
 
+  @media (max-width: 768px) {
+    @include title(24px);
+  }
+
   &--big {
     @include title(44px);
+
+    @media (max-width: 768px) {
+      @include title(26px);
+    }
   }
 
   &--small {
     @include title(28px);
+
+    @media (max-width: 768px) {
+      @include title(22px);
+    }
   }
 }
 
@@ -116,6 +140,10 @@ body {
   grid-template-columns: 1fr 1fr;
   align-items: center;
 
+  @media (max-width: 768px) {
+    display: block;
+  }
+
   img {
     max-width: 100%;
   }
@@ -145,6 +173,12 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      @media (max-width: 768px) {
+        position: relative;
+        left: 0;
+        width: 100%;
+      }
     }
   }
 }
